--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "test-build-deploy": "ng build && firebase deploy --only hosting:staging",
+    "prod-build-deploy": "ng build --prod && firebase deploy --only hosting:production"
   },
   "private": true,
   "dependencies": {
